[gd_scene load_steps=3 format=3 uid="uid://5kxtoc8tn1ps"]

[ext_resource type="Script" path="res://ui/inventory/3.0/slot.gd" id="1_o7y0k"]
[ext_resource type="Texture2D" uid="uid://vsv4wbmeog0q" path="res://icon.svg" id="2_ckjb7"]

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
script = ExtResource("1_o7y0k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_ckjb7")
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/outline_size = 3
text = "x99"

[node name="DurabilityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/outline_size = 3
text = "100%"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
